--- a/dynalist.css
+++ b/dynalist.css
@@ -19,14 +19,14 @@
   /* @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap'); */
 
   /* "JetBrains Mono", monospace (100 ~ 800) */
-  @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
+  /* @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap'); */
 
   /* Interop */
   @import url(https://rsms.me/inter/font-files/InterVariable.woff2?v=4.1);
 
   /* Cascadia Mono */
-  @import url(https://cdn.jsdelivr.net/gh/jadewisemann/cdn-webfont/cascadia-code/CascadiaCode.woff2);
-  @import url(https://cdn.jsdelivr.net/gh/jadewisemann/cdn-webfont/cascadia-code/CascadiaCodeItalic.woff2);
+  /* @import url(https://cdn.jsdelivr.net/gh/jadewisemann/cdn-webfont/cascadia-code/CascadiaCode.woff2); */
+  /* @import url(https://cdn.jsdelivr.net/gh/jadewisemann/cdn-webfont/cascadia-code/CascadiaCodeItalic.woff2); */
 
   @font-face {
     font-family: 'CascadiaCode';
@@ -79,9 +79,9 @@
     text-decoration: none;
     border-radius: 0.3em;
     padding: 2px 5px;
-  }
-  .node-tag:hover {
-    background: rgba(172, 30, 43, 0.6);
+    &:hover {
+      background: rgba(172, 30, 43, 0.6);
+    }
   }
 
   /* Node */
@@ -134,30 +134,31 @@
       font-size: 1em;
     }
 
-    .node-link-internal.is-displayed {
-      font-family: inherit;
-      border: none;
-      color: var(--orange);
-      font-style: italic;
-      background: inherit;
-      margin-top: auto;
+    .node-link-internal { 
+      &.is-displayed {
+        font-family: inherit;
+        border: none;
+        color: var(--orange);
+        font-style: italic;
+        background: inherit;
+        margin-top: auto;
+        &:before {
+          content: "";
+          padding-right: 0px;
+        }
+        &:hover {
+          text-decoration: underline;
+          &::after {
+            content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 24 24' fill='none'%3E%3Cpath d='M10 10.0367H8V16.0367H14V14.0367H11.4142L16.7438 8.70712L15.3296 7.2929L10 12.6225V10.0367Z' fill='currentColor'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M1 5C1 2.79086 2.79086 1 5 1H19C21.2091 1 23 2.79086 23 5V19C23 21.2091 21.2091 23 19 23H5C2.79086 23 1 21.2091 1 19V5ZM5 3H19C20.1046 3 21 3.89543 21 5V19C21 20.1046 20.1046 21 19 21H5C3.89543 21 3 20.1046 3 19V5C3 3.89543 3.89543 3 5 3Z' fill='currentColor'/%3E%3C/svg%3E");
+            display: inline-block;
+            width: 14px;
+            height: 14px;
+            margin-bottom: 3px;
+            vertical-align: middle;
+          }
+        }
+      }
     }
-    .node-link-internal.is-displayed:before {
-      content: "";
-      padding-right: 0px;
-    }
-    .node-link-internal.is-displayed:hover {
-      text-decoration: underline;
-    }    
-
-    .node-link-internal.is-displayed:hover::after {
-      content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 24 24' fill='none'%3E%3Cpath d='M10 10.0367H8V16.0367H14V14.0367H11.4142L16.7438 8.70712L15.3296 7.2929L10 12.6225V10.0367Z' fill='currentColor'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M1 5C1 2.79086 2.79086 1 5 1H19C21.2091 1 23 2.79086 23 5V19C23 21.2091 21.2091 23 19 23H5C2.79086 23 1 21.2091 1 19V5ZM5 3H19C20.1046 3 21 3.89543 21 5V19C21 20.1046 20.1046 21 19 21H5C3.89543 21 3 20.1046 3 19V5C3 3.89543 3.89543 3 5 3Z' fill='currentColor'/%3E%3C/svg%3E");
-      display: inline-block;
-      width: 14px;
-      height: 14px;
-      margin-bottom: 3px;
-      vertical-align: middle;
-  }
 
 
   /* Document */
